manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-catalog
  annotations:
    secret.reloader.stakater.com/reload: "service-catalog-k8s-plugin-tokens"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: service-catalog
          image: service-catalog
          command: ["node"]
          args:
            - packages/backend
            - --config
            - app-config.yaml
            - --config
          ports:
            - containerPort: 7007
          volumeMounts:
            - name: ca-cert
              mountPath: "/mnt/certs"
          resources:
            limits:
              cpu: 300m
            requests:
              cpu: 200m
          livenessProbe:
            httpGet:
              path: /healthz
              port: 7007
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: 7007
            failureThreshold: 30
            periodSeconds: 10
      volumes:
        - name: ca-cert
          secret:
            secretName: service-catalog-cluster-cert
            items:
              - key: ca.crt
                path: ca.crt
