manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-catalog
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
    - port: 7007
      targetPort: 7007
    - port: 3000
      targetPort: 3000
