manifests/base/route-webterminal.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: service-catalog-webterminal
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: service-catalog
